--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@
 .quick-link {
   width: 200px;
   height: 100%;
-  background: darkblue;
+  background: #1890FE;
   position: fixed;
   right: 0;
   top: 0;
