--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
       <li nz-menu-item>
         <a routerLink="/login">login</a>
       </li>
+      <li nz-menu-item>
+        <a routerLink="/list">list</a>
+      </li>
       <li nz-menu-item><a routerLink="/register">register</a></li>
       <li nz-menu-item><a routerLink="/search">search</a></li>
     </ul>
